adicionando funcionalidade de logar e cadastrar

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,8 @@ target 'Ecommerce' do
 
   pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
 
+  pod 'react-native-date-picker', :path => '../node_modules/react-native-date-picker'
+
   target 'EcommerceTests' do
     inherit! :complete
     # Pods for testing
