--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-date-picker": "^3.3.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-masked-text": "^1.13.0",
     "react-native-reanimated": "^2.2.0",
